AutoIK-Len stops working after releasing the mouse #66870

Closed
opened 2019-07-13 16:55:39 +02:00 by Alex · 8 comments

System Information
Intel Core 2 Quad, 8 Gb RAM, NVidia GeForce GTX 960 2GB
Windows 7 x64

Blender Version
Broken: 2.80 up to e3c586e262 from 2019-07-12 (and there were some buildbot versions of 2.79 where that function was broken as well)
Worked: 2.79

Short description of error
AutoIK forgets about its IK length that you can set by mouse wheel during transform. When you release the mouse number of chain links stays the same but stops working.

Exact steps for others to reproduce the error1. Open Blender, add an Armature with several bones in it.

  1. Open Blender, add an Armature with several bones in it.
  2. Enter Pose Mode, enable AutoIK and drag the last bone.
  3. Adjust the AutoIK-Len by scrolling the mouse wheel.
  4. Release the mouse and drag again.
  • In 2.79 AutoIK-Len will stay fixed and work as expected.
  • In 2.80 AutoIK-Len will display the same number but the actual behavior will be the same as if you haven't set any length at all forcing you to scroll the wheel every time you release the mouse.

I distinctively remember there was a problem exactly like that in a certain developer revision of 2.79 and if I'm not mistaken it was fixed but now the problem is there again.

**System Information** Intel Core 2 Quad, 8 Gb RAM, NVidia GeForce GTX 960 2GB Windows 7 x64 **Blender Version** Broken: 2.80 up to e3c586e262dd from 2019-07-12 (and there were some buildbot versions of 2.79 where that function was broken as well) Worked: 2.79 **Short description of error** AutoIK forgets about its IK length that you can set by mouse wheel during transform. When you release the mouse number of chain links stays the same but stops working. **Exact steps for others to reproduce the error**1. Open Blender, add an Armature with several bones in it. 1. Open Blender, add an Armature with several bones in it. 2. Enter Pose Mode, enable AutoIK and drag the last bone. 3. Adjust the AutoIK-Len by scrolling the mouse wheel. 4. Release the mouse and drag again. - In 2.79 AutoIK-Len will stay fixed and work as expected. - In 2.80 AutoIK-Len will display the same number but the actual behavior will be the same as if you haven't set any length at all forcing you to scroll the wheel every time you release the mouse. I distinctively remember there was a problem exactly like that in a certain developer revision of 2.79 and if I'm not mistaken it was fixed but now the problem is there again.
Author

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst
Sebastian Parborg self-assigned this 2019-07-15 14:34:16 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

It must be related in some way to 03e8202b7b

It must be related in some way to 03e8202b7b

I've uploaded a fix: D5260

I've uploaded a fix: [D5260](https://archive.blender.org/developer/D5260)

This issue was referenced by ee55ac19dc

This issue was referenced by ee55ac19dc884dfb84f2a39928f7ab2898f8a712

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Phigon

Added subscriber: @Phigon

Heh, and here I went and made an addon to replace AutoIK because of this.

Heh, and here I went and made an addon to replace AutoIK because of this.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66870
No description provided.